--- a/app/src/main/res/values-ru/help.xml
+++ b/app/src/main/res/values-ru/help.xml
@@ -21,36 +21,36 @@
     ]]></string>
 
     <string name="help_create_seed"><![CDATA[
-        <h1>Create Wallet - Seed</h1>
-        <p>If you already have a Monero Address and want to recover the transactions from the blockchain!</p>
-        <p>Enter a unique wallet name and password. The password is used for securing your wallet data on the device.
-        Use a strong password - even better use a passphrase.</p>
-        <p>Enter your Seed in the field \"Mnemonic Seed\".<p>
-        <p>If you know the block number of the first transaction used for this address, enter it in the
-        field \"Restore Height\" - leaving it blank will scan the <em>entire</em> blockchain for
-        transactions belonging to your address. This takes a <em>long</em> time.</p>
+        <h1>Создать кошелёк — Фраза</h1>
+        <p>Что делать, если у вас уже есть адрес Monero, и вы хотите восстановить транзакции из блокчейна.</p>
+        <p>Необходимо ввести уникальные имя и пароль кошелька. Пароль используется для защиты данных вашего
+		кошелька на устройстве. Необходимо использовать надёжный пароль. Лучше даже использовать фразу-пароль.</p>
+        <p>Ввести фразу в поле \"Мнемоническая фраза\".<p>
+        <p>Если вам известен номер блока первой транзакции, который использовался с этим адресом, следует
+		ввести его в поле \"Восстановить высоту\". Если не заполнить это поле, то будет просканирован <em>весь</em> блокчейн,
+		чтобы найти транзакции, принадлежащие к вашему адресу, а это займёт <em>много</em> времени.</p>
     ]]></string>
 
     <string name="help_create_keys"><![CDATA[
-        <h1>Create Wallet - Keys</h1>
+        <h1>Создать кошелёк — Ключи</h1>
         <p>If you are recovering your wallet using your keys!</p>
-        <p>Enter a unique wallet name and password. The password is used for securing your wallet data on the device.
-        Use a strong password - even better use a passphrase.<p>
+        <p>Необходимо ввести уникальные имя и пароль кошелька. Пароль используется для защиты данных вашего
+		кошелька на устройстве. Необходимо использовать надёжный пароль. Лучше даже использовать фразу-пароль.<p>
         <p>Enter your Monero Address in the field \"Public Address\" and fill out \"View Key\" and  \"Spend Key\".</p>
-        <p>If you know the block number of the first transaction used for this address, enter it in the
-        field \"Restore Height\" - leaving it blank will scan the <em>entire</em> blockchain for
-        transactions belonging to your address. This takes a <em>long</em> time.</p>
+        <p>Если вам известен номер блока первой транзакции, который использовался с этим адресом, следует
+		ввести его в поле \"Восстановить высоту\". Если не заполнить это поле, то будет просканирован <em>весь</em> блокчейн,
+		чтобы найти транзакции, принадлежащие к вашему адресу, а это займёт <em>много</em> времени.</p>
     ]]></string>
 
     <string name="help_create_view"><![CDATA[
         <h1>Create Wallet - View</h1>
         <p>If you just want to monitor incoming transactions to a wallet!</p>
-        <p>Enter a unique wallet name and password. The password is used for securing your wallet data on the device.
-        Use a strong password - even better use a passphrase.<p>
+        <p>Необходимо ввести уникальные имя и пароль кошелька. Пароль используется для защиты данных вашего
+		кошелька на устройстве. Необходимо использовать надёжный пароль. Лучше даже использовать фразу-пароль.<p>
         <p>Enter your Monero Address in the field \"Public Address\" and fill out the \"View Key\".</p>
-        <p>If you know the block number of the first transaction used for this address, enter it in the
-        field \"Restore Height\" - leaving it blank will scan the <em>entire</em> blockchain for
-        transactions belonging to your address. This takes a <em>long</em> time.</p>
+        <p>Если вам известен номер блока первой транзакции, который использовался с этим адресом, следует
+		ввести его в поле \"Восстановить высоту\". Если не заполнить это поле, то будет просканирован <em>весь</em> блокчейн,
+		чтобы найти транзакции, принадлежащие к вашему адресу, а это займёт <em>много</em> времени.</p>
     ]]></string>
 
     <string name="help_details"><![CDATA[
@@ -93,32 +93,32 @@
     ]]></string>
 
     <string name="help_list"><![CDATA[
-        <h1>Wallet List</h1>
-        <h2>Node</h2>
-        <p>Monerujo uses a Remote Node to communicate with the Monero Network without having
-        to download and store a copy of the whole blockchain itself. You can find a list of popular
-        remote nodes or learn how to run your own remote node here https://moneroworld.com/<p>
-        <p>Monerujo comes with some Remote Nodes preset. It remembers the last five nodes used.</p>
-        <h2>Wallets</h2>
-        <p>Here you see your wallets. They are located in the <tt>monerujo</tt> folder
-        in the internal storage of your device. You can use a file explorer app to see them.
-        You should make backups of this folder on a regular basis to off-device storage in
-        case your device explodes or gets stolen.</p>
-        <p>Select a wallet to open it or press the \"+\" to create a new one.
-        Or select one of the wallet operations:</p>
-        <h3>Details</h3>
-        <p>Show the wallet details, seed &amp; keys.</p>
-        <h3>Receive</h3>
-        <p>Make a QR code for receiving Moneroj.</p>
-        <h3>Rename</h3>
-        <p>Rename the wallet. Backups are not renamed.</p>
-        <h3>Backup</h3>
-        <p>Make a copy of the wallet in the <tt>backups</tt> folder inside the <tt>monerujo</tt>
-        overwriting previous copies there.</p>
-        <h3>Archive</h3>
-        <p>Make a backup and delete the wallet afterwards. The copy remains in the <tt>backups</tt>
-        folder. If you no longer need your backups you should delete them with a file explorer or
-        secure delete app.</p>
+        <h1>Список кошелька</h1>
+        <h2>Узел</h2>
+        <p>Для связи с сетью Monero без загрузки и сохранения копии всего блокчейна Monerujo использует
+		удалённый узел. Список популярных удалённых узлов  и информацию о том, как запустить собственный
+		удалённый узел, можно найти здесь: https://moneroworld.com<p>
+        <p>Monerujo имеет некоторые предустановленные удалённые узлы. Также кошелёк запоминает
+		пять последних использованных узлов.</p>
+        <h2>Кошельки</h2>
+        <p>Здесь вы можете посмотреть кошельки. Они находятся в папке Monerujo на внутреннем накопителе
+		вашего устройства. Чтобы просмотреть их, можно использовать файловый менеджер. Необходимо на
+		регулярной основе создавать резервную копию этой папки для её хранения вне устройства на тот
+		случай, если устройство будет повреждено или украдено.</p>
+        <p>Чтобы открыть кошелёк, необходимо выбрать его, а чтобы создать новый, следует
+		использовать \"+\". Или же можно выбрать одну из указанных ниже операций.</p>
+        <h3>Подробная информация</h3>
+        <p>Показать подробную информацию по кошельку, мнемонической фразе и приложению, ключам.</p>
+        <h3>Получить</h3>
+        <p>Создать QR-код для получения Monero.</p>
+        <h3>Переименовать</h3>
+        <p>Переименовать кошелёк. Резервные копии не переименовываются.</p>
+        <h3>Создать резервную копию</h3>
+        <p>Создать копию кошелька в папке <tt>backups</tt> внутри Monerujo, переписав предыдущие копии.</p>
+        <h3>Архивировать</h3>
+        <p>Создать резервную копию и после этого удалить кошелёк. Копия остаётся в папке <tt>backups</tt>.
+		Если необходимости в резервных копиях отсутствует, следует удалить их, используя файловый
+		менеджер или приложение для безопасного удаления файлов.</p>
     ]]></string>
 
     <string name="help_wallet"><![CDATA[
