--- a/app/src/main/res/layout/prompt_changepw.xml
+++ b/app/src/main/res/layout/prompt_changepw.xml
@@ -1,62 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp">
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/etWalletPasswordA"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:errorEnabled="true">
-
-        <android.support.design.widget.TextInputEditText
-            style="@style/MoneroEdit"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/generate_password_hint"
-            android:imeOptions="actionNext"
-            android:inputType="textVisiblePassword"
-            android:textAlignment="textStart" />
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/etWalletPasswordB"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/section_top"
-        app:errorEnabled="true">
-
-        <android.support.design.widget.TextInputEditText
-            style="@style/MoneroEdit"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/generate_password_hint"
-            android:imeOptions="actionDone"
-            android:inputType="textVisiblePassword"
-            android:textAlignment="textStart" />
-    </android.support.design.widget.TextInputLayout>
+    android:layout_height="wrap_content">
 
     <LinearLayout
-        android:id="@+id/llFingerprintAuth"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:visibility="gone">
+        android:orientation="vertical"
+        android:padding="8dp">
 
-        <Switch
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/etWalletPasswordA"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:errorEnabled="true">
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:text="@string/generate_fingerprint_hint"
-            android:textSize="18sp" />
+            <android.support.design.widget.TextInputEditText
+                style="@style/MoneroEdit"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/generate_password_hint"
+                android:imeOptions="actionNext"
+                android:inputType="textVisiblePassword"
+                android:textAlignment="textStart" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/etWalletPasswordB"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/section_top"
+            app:errorEnabled="true">
+
+            <android.support.design.widget.TextInputEditText
+                style="@style/MoneroEdit"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/generate_password_hint"
+                android:imeOptions="actionDone"
+                android:inputType="textVisiblePassword"
+                android:textAlignment="textStart" />
+        </android.support.design.widget.TextInputLayout>
+
+        <LinearLayout
+            android:id="@+id/llFingerprintAuth"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <Switch
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="@string/generate_fingerprint_hint"
+                android:textSize="18sp" />
+        </LinearLayout>
+
     </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
