--- a/app/src/main/res/layout/fragment_receive.xml
+++ b/app/src/main/res/layout/fragment_receive.xml
@@ -128,36 +128,38 @@
                 android:text="@string/send_generate_paymentid_hint"
                 android:textColor="@color/moneroGray"
                 android:visibility="visible" />
-
         </LinearLayout>
 
-        <FrameLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/tvQrCode"
-                style="@style/MoneroFab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:drawablePadding="4dp"
-                android:drawableStart="@drawable/ic_info_outline_gray_24dp"
-                android:text="@string/label_receive_info_gen_qr_code"
-                android:textAlignment="center"
-                android:textSize="16sp"
-                android:visibility="invisible" />
 
             <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_gravity="center"
+                android:layout_above="@id/tvNfc"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
                 android:layout_margin="16dp"
                 android:clickable="true"
+                android:focusable="true"
                 android:foreground="?android:attr/selectableItemBackground"
                 card_view:cardCornerRadius="2dp"
                 card_view:cardElevation="8dp"
                 card_view:contentPadding="4dp">
+
+                <TextView
+                    android:id="@+id/tvQrCode"
+                    style="@style/MoneroFab"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:drawablePadding="4dp"
+                    android:drawableStart="@drawable/ic_info_outline_gray_24dp"
+                    android:text="@string/label_receive_info_gen_qr_code"
+                    android:textAlignment="center"
+                    android:textSize="16sp"
+                    android:visibility="gone" />
 
                 <ImageView
                     android:id="@+id/qrCode"
@@ -166,7 +168,19 @@
                     android:adjustViewBounds="true"
                     android:background="#00000000" />
             </android.support.v7.widget.CardView>
-        </FrameLayout>
+
+            <TextView
+                android:id="@+id/tvNfc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:drawablePadding="8dp"
+                android:drawableStart="@drawable/ic_nfc_black_24dp"
+                android:text="@string/nfc_tag_tap"
+                android:visibility="visible" />
+        </RelativeLayout>
     </LinearLayout>
 
     <ImageView
