--- a/app/src/main/res/layout/fragment_send_address.xml
+++ b/app/src/main/res/layout/fragment_send_address.xml
@@ -125,6 +125,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="32dp"
         android:clickable="true"
+        android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
         card_view:cardCornerRadius="2dp"
         card_view:cardElevation="8dp"
@@ -138,7 +139,17 @@
             android:gravity="center"
             android:text="@string/send_qr_hint"
             android:textSize="20dp" />
-
     </android.support.v7.widget.CardView>
 
+    <TextView
+        android:id="@+id/tvNfc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
+        android:drawablePadding="8dp"
+        android:drawableStart="@drawable/ic_nfc_black_24dp"
+        android:gravity="center"
+        android:text="@string/nfc_tag_tap"
+        android:visibility="visible" />
 </LinearLayout>
